--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -6,7 +6,7 @@
 </head>
 <style type="text/css">
 	.dropbtn {
-		background-color: #04AA6D;
+		background-color: #003366;
 		color: white;
 		padding: 16px;
 		font-size: 16px;
@@ -78,7 +78,7 @@
 					<a href="#">Writing</a>
 				</div>
 			</div>
-			<input type="text" placeholder="Search">
+			<input id="search" type="text" placeholder="Search">
 		</div>
 	</center>
 
