aligned dept and search

--- a/static/styles.css
+++ b/static/styles.css
@@ -412,3 +412,11 @@ nav li {
 	}
 }
 }
+
+.selectgroup {
+  display: inline-block;
+  text-align: center;
+}
+.selectgroup label {
+  display: block;
+}
