--- a/templates/coursefeedbackform.html
+++ b/templates/coursefeedbackform.html
@@ -23,7 +23,8 @@
         <div id="overall">
             <div class="selectgroup">
                 <p style="margin:0" id="section">Rating</p>
-                <label for="section">&nbsp;</label></div>
+                <label for="section">&nbsp;</label>
+            </div>
             <div class="selectgroup">
                 <input id="radio1" name="rating" type="radio" value="1">
                 <label for="radio1">1</label>
