--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -8,41 +8,42 @@
 <body>
 	<center><h1>Rate My Course</h1></center>
 	<center>
-		<b>Department</b> <select id="dropMenu" class="dropdown-content">
-					<option value="Accounting">Accounting</option>
-					<option value="Anthropology">Anthropology</option>
-					<option value="Art History">Art History</option>
-					<option value="Biology">Biology</option>
-					<option value="Brain & Cognitive Sciences">Brain & Cognitive Sciences</option>
-					<option value="Business">Business</option>
-					<option value="Chemical Engineering">Chemical Engineering</option>
-					<option value="Chemistry">Chemistry</option>
-					<option value="Computer Science">Computer Science</option>
-					<option value="Economics">Economics</option>
-					<option value="Education">Education</option>
-					<option value="English">English</option>
-					<option value="Finance">Finance</option>
-					<option value="Studio Arts">Studio Arts</option>
-					<option value="Geography">Geography</option>
-					<option value="Geology">Geology</option>
-					<option value="History">History</option>
-					<option value="Linguistics">Linguistics</option>
-					<option value="Marketing">Marketing</option>
-					<option value="Mathematics">Mathematics</option>
-					<option value="Music">Music</option>
-					<option value="Nursing">Nursing</option>
-					<option value="Philosophy">Philosophy</option>
-					<option value="Physics">Physics</option>
-					<option value="Political Science">Political Science</option>
-					<option value="Psychology">Psychology</option>
-					<option value="Theater">Theater</option>
-					<option value="Women's Studies">Women's Studies</option>
-					<option value="Writing">Writing</option>
-				</select>&nbsp;
+		<b>Department</b>
+		<select id="dropMenu" class="dropdown-content">
+			<option value="Accounting">Accounting</option>
+			<option value="Anthropology">Anthropology</option>
+			<option value="Art History">Art History</option>
+			<option value="Biology">Biology</option>
+			<option value="Brain & Cognitive Sciences">Brain & Cognitive Sciences</option>
+			<option value="Business">Business</option>
+			<option value="Chemical Engineering">Chemical Engineering</option>
+			<option value="Chemistry">Chemistry</option>
+			<option value="Computer Science">Computer Science</option>
+			<option value="Economics">Economics</option>
+			<option value="Education">Education</option>
+			<option value="English">English</option>
+			<option value="Finance">Finance</option>
+			<option value="Studio Arts">Studio Arts</option>
+			<option value="Geography">Geography</option>
+			<option value="Geology">Geology</option>
+			<option value="History">History</option>
+			<option value="Linguistics">Linguistics</option>
+			<option value="Marketing">Marketing</option>
+			<option value="Mathematics">Mathematics</option>
+			<option value="Music">Music</option>
+			<option value="Nursing">Nursing</option>
+			<option value="Philosophy">Philosophy</option>
+			<option value="Physics">Physics</option>
+			<option value="Political Science">Political Science</option>
+			<option value="Psychology">Psychology</option>
+			<option value="Theater">Theater</option>
+			<option value="Women's Studies">Women's Studies</option>
+			<option value="Writing">Writing</option>
+		</select>&nbsp;
 		<input id="search" type="text" placeholder="Search">
 	</center>
 	<br>
-	
+
 	<div class="home">
 		<footer>
 		   <h4>Sarah, Grant, Kelly, Rachael, Emersyn- CSC 210 Human Computer Interaction 👩🏻‍💻 👩‍💻 👨🏻‍💻</h4>
