--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,5 +23,7 @@
          <h4>Sarah, Grant, Kelly, Rachael, Emersyn - CSC 210 Human Computer Interaction 👩🏻‍💻 👩‍💻 👨🏻‍💻</h4>
        </footer>
        </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <script src="../js/script.js"></script>
     </body>
 </html>
