--- a/static/styles.css
+++ b/static/styles.css
@@ -248,7 +248,7 @@ ul {
 	font-size: 20px;
 	text-align: center;
 	padding-top: 2em;
-	padding-bottom: 1.5em;
+	padding-bottom: 2em;
 	padding-left: 0px;
 }
 
@@ -337,7 +337,7 @@ header {
 }
 
 .header {
-	margin-bottom: 100px;
+	margin-bottom: 8em;
 }
 
 img {
@@ -366,21 +366,22 @@ nav li {
 
 @media screen and (max-width: 930px) {
 	.menu {
-    text-align: center;
-    padding: 0em;
+    	text-align: center;
+   	 padding: 0em;
 	}
 
 	.menu a {
-    display: block;
-    padding: 1.5em;
+    	display: block;
+    	padding: 1.5em;
 	}
 
 	.menu a:hover {
-    background-color: #ADD8E6;
+    	background-color: #ADD8E6;
 	}
 
 	ul {
-	padding-bottom: .25em;
+	padding-bottom: 0em;
+	padding-top: 0em;
 	}
 
 	.slider {
