--- a/static/styles.css
+++ b/static/styles.css
@@ -111,6 +111,11 @@ fieldset {
 
 
 @media screen and (min-width: 200px) and (max-width: 550px) {
+	
+	.header {
+		margin-bottom: 10em;
+	}
+	
 	.lead {
 		max-width: 100%;
 		padding-left:  0px;
@@ -247,8 +252,8 @@ ul {
 	font-family: "Century Gothic";
 	font-size: 20px;
 	text-align: center;
-	padding-top: 2em;
-	padding-bottom: 2em;
+	padding-top: 1em;
+	padding-bottom: 1.5em;
 	padding-left: 0px;
 }
 
@@ -337,7 +342,7 @@ header {
 }
 
 .header {
-	margin-bottom: 10em;
+	margin-bottom: 8em;
 }
 
 img {
