--- a/templates/dining.html
+++ b/templates/dining.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
-         <div id="current_date"></div>
-      <section class="lead">
+         <div class="container">
+               <div id="current_date"></div>
+            <section class="lead">
          <h2 class="full-width">Dining Locations</h2>
          <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation">
          <div id="accordion">
