--- a/static/styles.css
+++ b/static/styles.css
@@ -419,7 +419,7 @@ nav li {
 	}
 }
 
-@media screen and (min-width: 550px) { 
+@media screen and (max-width: 550px) { 
 	ul {
 		margin-bottom: 0em;
 	}
