--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -42,13 +42,14 @@
 		</select>&nbsp;
 		<input id="search" type="text" placeholder="Search">
 	</center>
+	&nbsp;<button id="submitSearch">Submit</button>
 	<br>
 
 	<div class="home">
 		<footer>
 		   <h4>Sarah, Grant, Kelly, Rachael, Emersyn- CSC 210 Human Computer Interaction 👩🏻‍💻 👩‍💻 👨🏻‍💻</h4>
 		</footer>
-	 </div>
+	</div>
 
 	<script src="../js/script.js"></script>
 </body>
