--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,6 +31,6 @@
        </footer>
        </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script src="../js/script.js"></script>
+        <script src="../static/script.js"></script>
     </body>
 </html>
