--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,9 @@
 <!doctype html>
 <html>
-    <head>
-        <title>UR Web Hub</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../static/styles.css">
-    </head>
+  <head>
+    {% block head %}
+    {% endblock %}
+  </head>
     <body>
         <div class="header">
           <header>
