seeing if adding in container div solves layout issue

--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="container">
 	<center><h1>Rate My Course</h1></center>
 	<center>
 		<b>Department</b>
@@ -48,4 +48,5 @@
 	</center>
 	&nbsp;<button id="submitSearch">Submit</button>
 	<br>
+	</div>
 {% endblock %}
