adding section class lead

--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -10,6 +10,7 @@
 
 {% block content %}
 <div class="container">
+	<section class="lead">
 	<center><h1>Rate My Course</h1></center>
 	<center>
 		<b>Department</b>
@@ -48,5 +49,6 @@
 	</center>
 	&nbsp;<button id="submitSearch">Submit</button>
 	<br>
+</section>
 	</div>
 {% endblock %}
