adding head sections again

--- a/templates/downdetectorrefresh.html
+++ b/templates/downdetectorrefresh.html
@@ -1,24 +1,24 @@
 {% extends "layout.html" %}
 
+{% block head %}
+<title>Down Detector Refresh</title>
+<link rel="stylesheet" href="../static/styles.css">
+<style>
+    h1 {
+        padding-top: 1em;
+    }
+
+    h5 {
+        font-family: "Trebuchet MS";
+        font-size: 20px;
+        font-weight: bold;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
-
-<head>
-    <title>Down Detector Refresh</title>
-    <link rel="stylesheet" href="../static/styles.css">
-    <style>
-        h1 {
-            padding-top: 1em;
-        }
-
-        h5 {
-            font-family: "Trebuchet MS";
-            font-size: 20px;
-            font-weight: bold;
-            padding-left: 1em;
-            padding-right: 1em;
-        }
-    </style>
-</head>
 
 <body>
     <h1>Thank you for your report!</h1>
