--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/styles.css">
+    <style>
+        div.one {
+            text-align: center;
+            font-size: 30px;
+            color: black;
+            padding: 10px;
+            align-items: center;
+            justify-content: center;
+            float: left;
+            margin: 0 auto;
+        }
+        div.two {
+            text-align: center;
+            font-size: 30px;
+            color: black;
+            padding: 10px;
+            align-items: center;
+            justify-content: center;
+            float: left;
+            margin: 0 auto;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
