--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -13,20 +13,24 @@
             font-size: 30px;
             color: black;
             padding: 10px;
-            align-items: center;
+           /*  align-items: center;
             justify-content: center;
+            height: 900px;
+            width: 45%;
             float: left;
-            margin: 0 auto;
+            margin: 0 auto; */
         }
         div.two {
             text-align: center;
             font-size: 30px;
             color: black;
             padding: 10px;
-            align-items: center;
+           /* align-items: center;
             justify-content: center;
+            height: 900px;
+            width: 45%;
             float: left;
-            margin: 0 auto;
+            margin: 0 auto; */
         }
     </style>
 {% endblock %}
