--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -6,6 +6,11 @@
    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" href="../static/styles.css">
+   <style>
+	footer {
+		bottom: 0;
+	}
+   </style>
 {% endblock %}
 
 {% block content %}
