--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -12,6 +12,10 @@
         font-size: 24px;
     }
 
+    nav li {
+        font-size: 30px;
+    }
+
     h5 {
         font-family: "Trebuchet MS";
         font-size: 20px;
