--- a/templates/courseratings.html
+++ b/templates/courseratings.html
@@ -1,27 +1,125 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<head>
+    <!-- bar stuff is from w3schools.com/howto/tryit.asp?filename=tryhow_css_user_rating-->
+    <style>
+        .side {
+            float: left;
+            width: 15%;
+            margin-top: 10px;
+        }
 
-{% course %}<br>
-{% courseName %}<br>
-Overall: {% overall %}/5<br>
-{% numRatings %}<br>
-5 stars
-4 stars
-3 stars
-2 stars
-1 star
+        .middle {
+            margin-top: 10px;
+            float: left;
+            width: 70%;
+        }
 
-Difficulty: {% difficulty %}/5<br>
-Usefulness: {% usefulness %}/5<br>
+        /* Place text to the right */
+        .right {
+            text-align: right;
+        }
 
-<button id="rateThis">Rate this Course</button>
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
 
-Top Tags<br>
-Top Reviews<br>
-<!--Loop through reviews-->
-{%for i in range(0, len)%} 
-	
-{%endfor%}
+        /* The bar container */
+        .bar-container {
+            width: 100%;
+            background-color: #f1f1f1;
+            text-align: center;
+            color: white;
+        }
+    </style>
 
+</head>
+<body>
+    {% course %}<br>
+    {% courseName %}<br>
+    <div></div>
+    Overall: {% overall %}/5<br>
+    {% numRatings %}<br>
+    5 stars
+    4 stars
+    3 stars
+    2 stars
+    1 star
+
+    <div class="row">
+        <div class="side">
+            <div>5 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-5"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>{% fiveStar %}</div>
+        </div>
+        <div class="side">
+            <div>4 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-4"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>{% fourStar %}</div>
+        </div>
+        <div class="side">
+            <div>3 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-3"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>{% threeStar %}</div>
+        </div>
+        <div class="side">
+            <div>2 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-2"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>{% twoStar %}</div>
+        </div>
+        <div class="side">
+            <div>1 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-1"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>{% oneStar %}</div>
+        </div>
+    </div>
+
+
+    Difficulty: {% difficulty %}/5<br>
+    Usefulness: {% usefulness %}/5<br>
+
+    <button id="rateThis">Rate this Course</button>
+
+    Top Tags<br>
+    Top Reviews<br>
+    <!--Loop through reviews-->
+    {%for i in range(0, len)%}
+
+
+    {%endfor%}
+</body>
 {% endblock %}
