--- a/templates/courseratings.html
+++ b/templates/courseratings.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% course %}<br>
-{% courseName %}<br>
+<div id="courseID" style="font-size: 2em;"><b>{% courseID %}</b></div><br>
 Overall: {% overall %}/5<br>
 {% numRatings %}<br>
 5 stars
