switch to buttons

--- a/templates/addcourse.html
+++ b/templates/addcourse.html
@@ -40,8 +40,11 @@
 			<option value="Women's Studies">Women's Studies</option>
 			<option value="Writing">Writing</option>
 		</select></p>
+		<p>Would you like to submit a review for this course as well?
+        <input type="submit" id="submitReview" value="Yes">
+        <input type="submit" id="addCourse" value="No">
+        </p><br>
 		<input type="submit" style="display: none" />
-		<button id="submitAdd">Add Course</button>
 	</form>
 </body>
 {% endblock %}
