added if they say yes

--- a/templates/addcourse.html
+++ b/templates/addcourse.html
@@ -42,7 +42,7 @@
 		</select></p>
 		<p>Would you like to submit a review for this course as well?
         <input type="submit" id="submitReview" value="Yes">
-        <input type="submit" id="addCourse" value="No">
+        <input type="submit" id="submitAdd" value="No">
         </p><br>
 		<input type="submit" style="display: none" />
 	</form>
