js to make enter also submit search

--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -51,7 +51,7 @@
 		</select>&nbsp;
 		<input id="search" type="text" placeholder="Search">
 	</center>
-	<input type="submit" style="display: none" />
+	<!--<input type="submit" style="display: none" />-->
 	&nbsp;<button id="submitSearch">Submit</button>
 	</form><br>
 {% endblock %}
