--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -49,9 +49,9 @@
 			<option value="Women's Studies">Women's Studies</option>
 			<option value="Writing">Writing</option>
 		</select>&nbsp;
-		<input id="search" type="text" placeholder="Search">
+		<input id="search" type="text" placeholder="Search"> &nbsp;<button id="submitSearch">Submit</button>
 	</center>
 	<!--<input type="submit" style="display: none" />-->
-	&nbsp;<button id="submitSearch">Submit</button>
+	
 	</form><br>
 {% endblock %}
