--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -154,7 +154,7 @@
         <br>
         <p>Write a Review</p>
         <textarea cols="50" rows="10" name="review" placeholder="What do you want other students to know about this course?  Avoid profanity or derogatory terms."></textarea>
-        <input type="submit" style="display: none" />
+        <input type="submit" style="display: none" /><br>
         <button id="submitReview">Submit</button> <!--Redirect back to course page-->
     </form>
 </body>
