--- a/templates/ratemycourseratings.html
+++ b/templates/ratemycourseratings.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <head>
+	<title>{% courseID %}</title>
     <!-- bar stuff is from w3schools.com/howto/tryit.asp?filename=tryhow_css_user_rating-->
     <style>
         .side {
@@ -111,7 +112,7 @@
     Difficulty: {% difficulty %}/5<br>
     Usefulness: {% usefulness %}/5<br>
 
-    <button id="rateThis">Rate this Course</button>
+    <button id="rateThis">Rate this Course</button><br>
 
     Top Tags<br>
     Top Reviews<br>
