--- a/templates/ratemycourseadd.html
+++ b/templates/ratemycourseadd.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 	<title>Add Course</title>
+	<!-- <link rel="stylesheet" href="../static/styles.css"> -->
 {% endblock %}
 {% block content %}
 	<h3>Add Course</h3>
