--- a/templates/ratemycourseadd.html
+++ b/templates/ratemycourseadd.html
@@ -41,8 +41,8 @@
 			<option value="Writing">Writing</option>
 		</select></p>
 		<p>Would you like to submit a review for this course as well?
-        <input type="submit" id="submitReview" value="Yes">
-        <input type="submit" id="submitAdd" value="No">
+        <input type="button" id="submitReview" onclick="location.href='ratemycoursefeedback';" value="Yes">
+        <input type="button" id="submitAdd" onclick="location.href='ratemycoursefeedback';" value="No">
         </p><br>
 		<input type="submit" style="display: none" />
 	</form>
