--- a/templates/ratemycourseadd.html
+++ b/templates/ratemycourseadd.html
@@ -42,7 +42,7 @@
 		</select></p>
 		<p>Would you like to submit a review for this course as well?
         <input type="button" id="submitReview" onclick="location.href='ratemycoursefeedback';" value="Yes">
-        <input type="button" id="submitAdd" onclick="location.href='ratemycoursefeedback';" value="No">
+        <input type="button" id="submitAdd" onclick="location.href='ratemycourseratings';" value="No">
         </p><br>
 		<input type="submit" style="display: none" />
 	</form>
