--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -20,8 +20,8 @@
 {% block content %}
     <h3>Feedback Form</h3>
     <br />
-    <form method="POST">
-
+    <form method="POST" action="ratemycourseratings/{{courseID}}">
+        <p>Course ID <input type="text" id="courseid" style="width: 300px;" placeholder="{{courseID}}"></p>
         <p>Professor <input id="prof" type="text" placeholder="Enter professor name"></p><br>
         <p>Semester Taken <input id="sem" style="width: 300px;" type="text" placeholder="Enter semester you took the class (e.g. Fall 2022)"></p><br>
         <div id="overall">
